--- a/2dShooter/pom.xml
+++ b/2dShooter/pom.xml
@@ -58,6 +58,8 @@
     <modules>
         <module>branding</module>
         <module>application</module>
+        <module>Core</module>
+        <module>Common</module>
     </modules>
 
     <properties>
